[package]
name = "prr_launch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
zenoh = "0.7.0-rc"

joy_publisher = {git = "https://github.com/PureRustRobot/joy_publisher"}
command_controller = {git = "https://github.com/PureRustRobot/command_controller.git"}
motor_controller = {git = "https://github.com/PureRustRobot/motor_controller"}
udp_bridge = {git = "https://github.com/PureRustRobot/udp_bridge"}
